Fix issue with line breaks on several blocks
Affected blocks:

Content toggle
Click to tweet
Tabbed content

--- a/src/blocks/click-to-tweet/style.scss
+++ b/src/blocks/click-to-tweet/style.scss
@@ -4,44 +4,46 @@
  * CSS for both Frontend+Backend.
  */
 
-.wp-block-ub-block-click-to-tweet  {
-  margin: 0 auto;
-  max-width: 740px;
+.wp-block-ub-block-click-to-tweet {
+	margin: 0 auto;
+	max-width: 740px;
 }
 
 .ub_click_to_tweet {
-  width: 95%;
-  display: inline-block;
-  border: 1px solid;
-  border-radius: 4px;
-  padding: 10px;
-  margin: 25px 0px;
+	width: 95%;
+	display: inline-block;
+	border: 1px solid;
+	border-radius: 4px;
+	padding: 10px;
+	margin: 25px 0px;
 }
 
 .ub_tweet {
-  padding: 10px;
-  margin-left: 10px;
+	padding: 10px;
+	margin-left: 10px;
+	font-family: 'Segoe UI', Arial, sans-serif;
 }
 
 .ub_click_tweet {
-  width: 50%;
-  float: right;
-  text-align: right;
-  padding: 10px;
-  margin-right: 10px;
+	width: 50%;
+	float: right;
+	text-align: right;
+	padding: 10px;
+	margin-right: 10px;
 }
 
 .ub_click_tweet i {
-  display: inline-block;
-  width: 16px;
-  height: 14px;
-  background: url("../src/blocks/click-to-tweet/icons/sprite-twitter.png") no-repeat;
-  background-position-x: 0%;
-  background-position-y: 0%;
-  margin-right: 3px;
-  position: relative;
-  top: 0;
-  background-position: 0 -151px;
-  width: 25px;
-  height: 20px;
+	display: inline-block;
+	width: 16px;
+	height: 14px;
+	background: url('../src/blocks/click-to-tweet/icons/sprite-twitter.png')
+		no-repeat;
+	background-position-x: 0%;
+	background-position-y: 0%;
+	margin-right: 3px;
+	position: relative;
+	top: 0;
+	background-position: 0 -151px;
+	width: 25px;
+	height: 20px;
 }
